# projet-parky

./: Makefile  Makefile.am  Makefile.in  avis.txt  config.h  config.status  configure  configure.in  kamoun.glade.bak  kamoun.gladep.bak  project4V2 3(1).glade.bak  project4V2 3(1).gladep.bak
autom4te.cache/: output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  avis.c  avis.h  avis.txt  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h  main.c  parking.txt  projecglade
src/.deps/: avis.Po  callbacks.Po
